--- a/Poker/Poker/Client/Shared/MainLayout.razor
+++ b/Poker/Poker/Client/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 </div>
 
 <div class="main">
-    <div class="content px-4">
-
+    <div class="content px-4 container">
+        @Body
     </div>
 </div>
