--- a/Poker/Poker/Client/Shared/NavMenu.razor
+++ b/Poker/Poker/Client/Shared/NavMenu.razor
@@ -13,26 +13,26 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="/ManageTable" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
     </ul>
-        <AuthorizeView>
-            <Authorized>
-                <div class="nav-item px-3 fixed-bottom">
-                    <b class="text-white">Hello, @context.User.Identity.Name!</b>
-                    <hr />
-                    <button @onclick="@LogOut" class="btn btn-primary">LogOut</button>
-                </div>
-            </Authorized>
-            <NotAuthorized>
-                <div class="nav-item px-3 fixed-bottom">
-                    <button @onclick="@ShowSignIn" class="btn btn-primary">SignIn </button>
-                    <button @onclick="@ShowLogin" class="btn btn-primary">Login </button>
-                </div>
-            </NotAuthorized>
-        </AuthorizeView>
+    <AuthorizeView>
+        <Authorized>
+            <div class="nav-item px-3 fixed-bottom">
+                <b class="text-white">Hello, @context.User.Identity.Name!</b>
+                <hr />
+                <button @onclick="@LogOut" class="btn btn-primary">LogOut</button>
+            </div>
+        </Authorized>
+        <NotAuthorized>
+            <div class="nav-item px-3 fixed-bottom">
+                <button @onclick="@ShowSignIn" class="btn btn-primary">SignIn </button>
+                <button @onclick="@ShowLogin" class="btn btn-primary">Login </button>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
 
 
 
