Poker table display
Ability for users(later on admins) to manage see current poker tables and add new ones

--- a/Poker/Poker/Client/wwwroot/css/site.css
+++ b/Poker/Poker/Client/wwwroot/css/site.css
@@ -181,3 +181,20 @@ app {
         display: block;
     }
 }
+
+.spinner {
+    border: 16px solid silver;
+    border-top: 16px solid #337AB7;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 700ms linear infinite;
+    top: 40%;
+    left: 55%;
+    position: absolute;
+}
+
+.imageThumbnail {
+    height: 200px;
+    width: auto;
+}
