--- a/Poker/Poker/Client/Pages/TableList.razor
+++ b/Poker/Poker/Client/Pages/TableList.razor
@@ -5,12 +5,16 @@
 {
     <div class="spinner"></div>
 }
+else if (!PokerTables.Any())
+{
+    <p>There are no tables</p>
+}
 else
 {
     <div class="card-deck">
         @foreach (var table in PokerTables)
         {
-            <DisplayTable Table="table"></DisplayTable>
+            <DisplayTable Table="table" OnChange="EditHandler"></DisplayTable>
         }
     </div> 
 }
