--- a/Poker/Poker/Client/Shared/DisplayTable.razor
+++ b/Poker/Poker/Client/Shared/DisplayTable.razor
@@ -9,12 +9,14 @@
 
     <img class="card-img-top imageThumbnail" src="img/tableimg.png"/>
 
-
+    <AuthorizeView Roles="Admin">
         <div class="card-footer text-center">
             <a href="#" class="btn btn-primary m-1">View</a>
 
             <a href="#" class="btn btn-primary m-1">Edit</a>
 
-            <a href="#" class="btn btn-danger m-1">Delete</a>
+            <button @onclick="@Delete" class="btn btn-danger m-1">Delete</button>
         </div>
+    </AuthorizeView>
+
 </div>
