--- a/Poker/Poker/Client/Shared/NavMenu.razor
+++ b/Poker/Poker/Client/Shared/NavMenu.razor
@@ -11,13 +11,15 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/ManageTable" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-    </ul>
+    <AuthorizeView Roles="Admin">
+        <ul class="nav flex-column">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="/ManageTable" Match="NavLinkMatch.All">
+                    <span class="oi oi-tablet" aria-hidden="true"></span> ManageTables
+                </NavLink>
+            </li>
+        </ul>
+    </AuthorizeView>
     <AuthorizeView>
         <Authorized>
             <div class="nav-item px-3 fixed-bottom">
