Authenticated users can join the same table and see each other
Added GameSession controller and servie.Added a simple layout of how the games ession will look like

--- a/Poker/Poker/Client/Pages/Index.razor
+++ b/Poker/Poker/Client/Pages/Index.razor
@@ -1,5 +1,14 @@
 ﻿@page "/"
+@inherits IndexBase
+@inject NavigationManager NavigationManager
 
 <AuthorizeView Roles="User">
-    <TableList/>
+    @if(@CurrentTable != 0)
+    {
+        NavigationManager.NavigateTo("/Game");
+    }
+    else
+    {
+        <TableList/>
+    }
 </AuthorizeView>
