--- a/Poker/Poker/Client/Pages/TableList.razor
+++ b/Poker/Poker/Client/Pages/TableList.razor
@@ -14,7 +14,7 @@ else
     <div class="card-deck">
         @foreach (var table in PokerTables)
         {
-            <DisplayTable Table="table" OnChange="EditHandler"></DisplayTable>
+            <DisplayTable Table="table" OnChange="UpdateHandler"></DisplayTable>
         }
     </div> 
 }
