--- a/Poker/Poker/Client/_Imports.razor
+++ b/Poker/Poker/Client/_Imports.razor
@@ -11,6 +11,6 @@
 @using Blazored.Modal
 @using Blazored.Modal.Services
 @using Poker.Client.Services
-@using Poker.Shared.Models;
-@using Poker.Client.Modals;
+@using Poker.Shared.Models
+@using Poker.Client.Modals
 @using Poker.Shared
