--- a/Poker/Poker/Client/Pages/GameSession.razor
+++ b/Poker/Poker/Client/Pages/GameSession.razor
@@ -11,9 +11,9 @@ else
     <div class="container ">
         <div class="row">
             <div class="col-md-3">
-                @if (GameInformation.Players.Count >= 1)
+                @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 2) != null)
                 {
-                    <SessionPlayerInfo GameInformation = "@GameInformation" GamePlayer="@GameInformation.Players[0]"/>
+                    <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 2)" />
                 }
                 else
                 {
@@ -21,9 +21,9 @@ else
                 }
             </div>
             <div class="col-md-5">
-                @if (GameInformation.Players.Count >= 2)
+                @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 3) != null)
                 {
-                    <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players[1]" />
+                    <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 3)" />
                 }
                 else
                 {
@@ -31,9 +31,9 @@ else
                 }
             </div>
             <div class="col-md-3">
-                @if (GameInformation.Players.Count >= 3)
+                @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 4) != null)
                 {
-                    <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players[2]" />
+                    <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 4)" />
                 }
                 else
                 {
@@ -45,9 +45,9 @@ else
             <div class="col-md-3">
                 <div class="row">
                     <div class="col-md-12">
-                        @if (GameInformation.Players.Count >= 4)
+                        @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 1) != null)
                         {
-                            <p>@GameInformation.Players[3].Username</p>
+                            <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 1)" />
                         }
                         else
                         {
@@ -57,9 +57,9 @@ else
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        @if (GameInformation.Players.Count >= 5)
+                        @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 0) != null)
                         {
-                            <p>@GameInformation.Players[4].Username</p>
+                            <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 0)" />
                         }
                         else
                         {
@@ -84,9 +84,9 @@ else
             <div class="col-md-3">
                 <div class="row">
                     <div class="col-md-12">
-                        @if (GameInformation.Players.Count >= 6)
+                        @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 5) != null)
                         {
-                            <p>@GameInformation.Players[5].Username</p>
+                            <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 5)" />
                         }
                         else
                         {
@@ -96,9 +96,9 @@ else
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        @if (GameInformation.Players.Count >= 7)
+                        @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 6) != null)
                         {
-                            <p>@GameInformation.Players[6].Username</p>
+                            <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 6)" />
                         }
                         else
                         {
@@ -111,12 +111,20 @@ else
         <div class="row">
             <div class="col-md-3">
                 <button @onclick="@LeaveTable" class="btn btn-danger m-1">Leave table</button>
-                <button @onclick="@MarkReady" class="btn btn-primary m-1">Join table</button>
+                @if (GameInformation.Players.FirstOrDefault(e => e.Username == AuthState.User.Identity.Name) != null &&
+                     !GameInformation.Players.FirstOrDefault(e => e.Username == AuthState.User.Identity.Name).IsReady)
+                {
+                    <button @onclick="@MarkReady" class="btn btn-primary m-1">Join game</button>
+                }
+                else
+                {
+                    <button @onclick="@UnmarkReady" class="btn btn-primary m-1">Leave game</button>
+                }
             </div>
             <div class="col-md-5">
-                @if (GameInformation.Players.Count >= 8)
+                @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 7) != null)
                 {
-                    <p>@GameInformation.Players[7].Username</p>
+                    <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 7)" />
                 }
                 else
                 {
