--- a/Poker/Poker/Client/Shared/MainLayout.razor
+++ b/Poker/Poker/Client/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 <BlazoredModal />
 
 <div class="sidebar">
-    <NavMenu />
+    <NavMenu OnChange="StateHasChanged" />
 </div>
 
 <div class="main">
