--- a/Poker/Poker/Client/Pages/GameSession.razor
+++ b/Poker/Poker/Client/Pages/GameSession.razor
@@ -109,10 +109,10 @@ else
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <button @onclick="@LeaveTable" class="btn btn-danger m-1">Leave table</button>
                 @if (GameInformation.Players.FirstOrDefault(e => e.Username == AuthState.User.Identity.Name) != null &&
-                     !GameInformation.Players.FirstOrDefault(e => e.Username == AuthState.User.Identity.Name).IsReady)
+                     !GameInformation.Players.First(e => e.Username == AuthState.User.Identity.Name).IsReady)
                 {
                     <button @onclick="@MarkReady" class="btn btn-primary m-1">Join game</button>
                 }
@@ -121,7 +121,7 @@ else
                     <button @onclick="@UnmarkReady" class="btn btn-primary m-1">Leave game</button>
                 }
             </div>
-            <div class="col-md-5">
+            <div class="col-md-3">
                 @if (GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 7) != null)
                 {
                     <SessionPlayerInfo GameInformation="@GameInformation" GamePlayer="@GameInformation.Players.FirstOrDefault(e => e.SeatNumber == 7)" />
@@ -131,14 +131,11 @@ else
                     <p>Empty seat</p>
                 }
             </div>
-            <div class="col-md-3">
-                <div class="row">
-                </div>
-                <div class="row">
-                    @if (GameInformation.GameInProgress &&GameInformation.CurrentPlayer == AuthState.User.Identity.Name)
-                    {
-                        <p>@GameInformation.CurrentPlayer</p>
-                        if (GameInformation.RaiseAmount > 0)
+            <div class="col-md-5">
+                @if (GameInformation.GameInProgress &&GameInformation.CurrentPlayer == AuthState.User.Identity.Name)
+                {
+                    <div class="row">
+                        @if (GameInformation.RaiseAmount > 0)
                         {
                             <button @onclick="@Call" class="btn btn-primary m-1">Call</button>
                         }
@@ -148,9 +145,13 @@ else
 
                         }
                         <button @onclick="@Fold" class="btn btn-primary m-1">Fold</button>
-                        <button @onclick="@Raise" class="btn btn-primary m-1">Raise</button>
-                    }
-                </div>
+                        </div>
+                    <div class="row">
+                        <input @bind="@GameInformation.PlayerRaise" type="number" class="form-control col-md-4">
+                        <button @onclick="@Raise" class="btn btn-primary m-1" >Raise</button>
+                        <button @onclick="@AllIn" class="btn btn-primary m-1" >All-In</button>
+                    </div>
+                }
             </div>
         </div>
     </div>
